data/derived/comb/progs/unify/prog5773.ml.out
Characters 165-220:
  else if  List.length l1 < List.length l2 then clone 0 ((List.length l2) - (List.length l1)) @ l1 @ l2
                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type (int list * int list) list
       Type int is not compatible with type int list * int list 
